# crowl4

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: daily-briefing.yml
src/: fetch_news.py  main.py  summarize.py  telegram_send.py
