[project]
name = "crowl4"
version = "0.1.0"
description = "Daily Nate news ranking briefing to Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openai>=1.50",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
